structmeta-tests/tests/compile_fail/struct_meta/hash_map_flag.stderr
error[E0277]: the trait bound `structmeta::Flag: Parse` is not satisfied
 --> $DIR/hash_map_flag.rs:6:5
  |
6 |     rest: HashMap<String, Flag>,
  |     ^^^^ the trait `Parse` is not implemented for `structmeta::Flag`
